# Sutraworks-nexus

./: .env.example  .gitignore  CHANGELOG.md  CONTROL_GUIDE.md  Dockerfile  PRODUCTION_READY.md  RASPBERRY_PI.md  README.md  START.md  docker-compose.yml  nexusctl  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
deployment/: install.sh  nexus.service  run_mac.sh  stop_mac.sh
docs/: faq.md  index.md  use-cases.md
docs/api/: reference.md
docs/architecture/: causal.md  energy.md  integration.md  overview.md  production.md  reasoning.md  state-space.md  world-model.md
docs/design/: nexus_alpha_architecture.md
docs/implementation/: core.md  evaluation.md  launch_manual.md  optimization.md  service.md  training.md
docs/operations/: runbook.md
docs/research/: benchmarks-plan.md  competitive-analysis.md  design-principles.md  literature.md  motivation.md  theory.md  tokenization-study.md
docs/tutorials/: getting-started.md
examples/: __init__.py  basic_usage.py  benchmark_demo.py  research_validation.py  training_demo.py
nexus/: __init__.py  py.typed
nexus/configs/: alpha.py
nexus/core/: __init__.py  causal.py  continuous_ssm.py  energy.py  equilibrium.py  flowing.py  lifecycle.py  living.py  nexus_core.py  reasoning.py  state_space.py  tokenizer.py  types.py  world_model.py
nexus/evaluation/: __init__.py  algorithmic_tasks.py  benchmarks.py  causal_tasks.py  metrics.py  world_model_tasks.py
nexus/service/: auth.py  checkpoint.py  config.py  daemon.py  dashboard.html  hardware.py  logging_config.py  memory_manager.py  memory_utils.py  metrics.py  resilience.py  resource.py  server.py
nexus/training/: __init__.py  continual.py  data.py  losses.py  teacher.py  trainer.py
nexus_checkpoints/: checkpoint_20260107_143524.json  checkpoint_20260107_143542.json  checkpoint_20260107_144818.json  checkpoint_20260107_145025.json  checkpoint_20260107_145643.json  checkpoint_20260107_145701.json
scripts/: gcp_startup.sh  train_alpha.py
tests/: __init__.py  conftest.py  test_core.py  test_hardware.py  test_integration.py  test_layerfree.py  test_production.py  test_security.py  verify_architecture.py  verify_governance.py  verify_resilience.py  verify_security_remediation.py
